--- a/composer.json
+++ b/composer.json
@@ -93,7 +93,12 @@
         "laminas/laminas-config": "^2.5.1 || ^3.1.0",
         "laminas/laminas-filter": "^2.5.1",
         "laminas/laminas-servicemanager": "^2.7.4 || ^3.3.0",
-        "seld/signal-handler": "^1.2.0"
+        "seld/signal-handler": "^1.2.0",
+        "aws/aws-sdk-php": "^3.4.0",
+        "async-aws/core": "^1.5.0",
+        "async-aws/sns": "^1.0.0",
+        "symfony/messenger": "^5.3.0 || ^6.0.0",
+        "symfony/amazon-sqs-messenger": "^5.0.0 || ^6.0.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5.2",
@@ -135,7 +140,8 @@
         "spryker/docker-chromedriver": "dev-master",
         "spryker-sdk/load-testing": "dev-master",
         "spryker-sdk/security-checker": "dev-master",
-        "codeception/c3": "^2.6"
+        "codeception/c3": "^2.6",
+        "spryker-sdk/async-api": "^0.1.0"
     },
     "autoload": {
         "psr-4": {
