--- a/composer.json
+++ b/composer.json
@@ -1084,7 +1084,8 @@
         "chromium-revision": 814168,
         "allow-plugins": {
             "dealerdirect/phpcodesniffer-composer-installer": true,
-            "composer/package-versions-deprecated": true
+            "composer/package-versions-deprecated": true,
+            "sllh/composer-versions-check": false
         }
     },
     "scripts": {
