--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -167,7 +167,7 @@ jobs:
               run: vendor/bin/console transfer:validate
 
             - name: Run PHPStan
-              run: vendor/bin/phpstan analyze
+              run: vendor/bin/phpstan analyze -v
 
             - name: Run Architecture rules
               run: vendor/bin/phpmd src/ text vendor/spryker/architecture-sniffer/src/ruleset.xml --minimumpriority 2
