TE-10992 Upgrade suite to PHPStan 1.5.x

--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "ext-pgsql": "*",
         "ext-readline": "*",
         "ext-redis": "*",
+        "ondrejmirtes/better-reflection": "5.3.0.3 as 4.3.81",
         "spryker-eco/loggly": "^0.1.0",
         "spryker-eco/payone": "^4.0.0",
         "spryker-shop/agent-page": "^1.10.0",
