--- a/composer.json
+++ b/composer.json
@@ -100,7 +100,8 @@
         "twig/twig": "^1.43.1 || ^2.9.0 || ^3.0.0",
         "voku/anti-xss": "^4.1.20",
         "webmozart/glob": "^4.0.0",
-        "willdurand/negotiation": "^3.0.0"
+        "willdurand/negotiation": "^3.0.0",
+        "laminas/laminas-barcode": "^2.8.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5.2",
