--- a/deploy.ci.acceptance.yml
+++ b/deploy.ci.acceptance.yml
@@ -116,6 +116,7 @@ services:
             password: 'secret'
     broker:
         engine: rabbitmq
+        version: '3.9'
         api:
             username: 'spryker'
             password: 'secret'
@@ -128,6 +129,8 @@ services:
         version: 7.6
     scheduler:
         engine: jenkins
+        version: '2.324'
+        csrf-protection-enabled: true
     mail_catcher:
         engine: mailhog
     webdriver:
