--- a/deploy.ci.api.mariadb.yml
+++ b/deploy.ci.api.mariadb.yml
@@ -117,6 +117,7 @@ services:
             password: 'secret'
     broker:
         engine: rabbitmq
+        version: '3.9'
         api:
             username: 'spryker'
             password: 'secret'
@@ -129,6 +130,8 @@ services:
         version: '7.10'
     scheduler:
         engine: jenkins
+        version: '2.324'
+        csrf-protection-enabled: true
     mail_catcher:
         engine: mailhog
 
