--- a/deploy.ci.functional.mariadb.yml
+++ b/deploy.ci.functional.mariadb.yml
@@ -119,6 +119,7 @@ services:
             password: 'secret'
     broker:
         engine: rabbitmq
+        version: '3.9'
         api:
             username: 'spryker'
             password: 'secret'
@@ -131,6 +132,8 @@ services:
         version: '7.10'
     scheduler:
         engine: jenkins
+        version: '2.324'
+        csrf-protection-enabled: true
     mail_catcher:
         engine: mailhog
 
