--- a/deploy.spryker-69new.yml
+++ b/deploy.spryker-69new.yml
@@ -152,13 +152,13 @@ groups:
                         store: AT
                         services:
                             session:
-                                namespace: 8   
+                                namespace: 8
                     mp.us.69-new.demo-spryker.com:
                         entry-point: MerchantPortal
                         store: US
                         services:
                             session:
-                                namespace: 9                                                                                                                 
+                                namespace: 9
             Yves:
                 application: yves
                 endpoints:
@@ -205,7 +205,7 @@ groups:
                         entry-point: BackendApi
                     backend-api.us.69-new.demo-spryker.com:
                         store: US
-                        entry-point: BackendApi                                              
+                        entry-point: BackendApi
             Glue:
                 application: glue
                 endpoints:
@@ -227,6 +227,7 @@ services:
                 protocol: tcp
     broker:
         engine: rabbitmq
+        version: '3.9'
         api:
             username: 'spryker'
             password: 'secret'
@@ -249,6 +250,8 @@ services:
                 protocol: tcp
     scheduler:
         engine: jenkins
+        version: '2.324'
+        csrf-protection-enabled: true
         endpoints:
             scheduler.69-new.demo-spryker.com:
     mail_catcher:
