--- a/deploy.spryker-staging.yml
+++ b/deploy.spryker-staging.yml
@@ -198,6 +198,7 @@ services:
                 protocol: tcp
     broker:
         engine: rabbitmq
+        version: '3.9'
         api:
             username: 'spryker'
             password: 'secret'
@@ -220,6 +221,8 @@ services:
                 protocol: tcp
     scheduler:
         engine: jenkins
+        version: '2.324'
+        csrf-protection-enabled: true
         endpoints:
             scheduler.staging.cloud.spryker.toys:
     mail_catcher:
