--- a/.travis.yml
+++ b/.travis.yml
@@ -556,7 +556,7 @@ jobs:
           addons:
               <<: *ADDONS_BASE_INFRASTRUCTURE
 
-        - name: PHPStan spryker/spryker (prefer-lowest) [1/3]
+        - name: PHPStan spryker/spryker (prefer-lowest) [1/4]
           php: "7.4"
           stage: Test
           before_install:
@@ -565,11 +565,11 @@ jobs:
           install:
               - *COMPOSER_PREFER_LOWEST
           script:
-              - vendor/bin/console code:phpstan -m Spryker.all -v -o 0,300
+              - vendor/bin/console code:phpstan -m Spryker.all -v -o 0,250
           addons:
               <<: *ADDONS_BASE_INFRASTRUCTURE
 
-        - name: PHPStan spryker/spryker (prefer-lowest) [2/3]
+        - name: PHPStan spryker/spryker (prefer-lowest) [2/4]
           php: "7.4"
           stage: Test
           before_install:
@@ -578,11 +578,11 @@ jobs:
           install:
               - *COMPOSER_PREFER_LOWEST
           script:
-              - vendor/bin/console code:phpstan -m Spryker.all -v -o 300,300
+              - vendor/bin/console code:phpstan -m Spryker.all -v -o 250,250
           addons:
               <<: *ADDONS_BASE_INFRASTRUCTURE
 
-        - name: PHPStan spryker/spryker (prefer-lowest) [3/3]
+        - name: PHPStan spryker/spryker (prefer-lowest) [3/4]
           php: "7.4"
           stage: Test
           before_install:
@@ -591,7 +591,20 @@ jobs:
           install:
               - *COMPOSER_PREFER_LOWEST
           script:
-              - vendor/bin/console code:phpstan -m Spryker.all -v -o 600
+              - vendor/bin/console code:phpstan -m Spryker.all -v -o 500,200
+          addons:
+              <<: *ADDONS_BASE_INFRASTRUCTURE
+
+        - name: PHPStan spryker/spryker (prefer-lowest) [4/4]
+          php: "7.4"
+          stage: Test
+          before_install:
+              - *AWS_SYNC_DOWN_POSTGRES
+              - *BEFORE_INSTALL_SCRIPT
+          install:
+              - *COMPOSER_PREFER_LOWEST
+          script:
+              - vendor/bin/console code:phpstan -m Spryker.all -v -o 700
           addons:
               <<: *ADDONS_BASE_INFRASTRUCTURE
 
@@ -921,7 +934,7 @@ jobs:
           addons:
               <<: *ADDONS_BASE_INFRASTRUCTURE
 
-        - name: PHP8 PHPStan spryker/spryker [1/3]
+        - name: PHP8 PHPStan spryker/spryker [1/4]
           php: "8.1.0"
           stage: Test
           before_install:
@@ -930,11 +943,11 @@ jobs:
           install:
               - *COMPOSER_INSTALL
           script:
-              - vendor/bin/console code:phpstan -m Spryker.all -v -o 0,300
+              - vendor/bin/console code:phpstan -m Spryker.all -v -o 0,250
           addons:
               <<: *ADDONS_BASE_INFRASTRUCTURE
 
-        - name: PHP8 PHPStan spryker/spryker [2/3]
+        - name: PHP8 PHPStan spryker/spryker [2/4]
           php: "8.1.0"
           stage: Test
           before_install:
@@ -943,11 +956,11 @@ jobs:
           install:
               - *COMPOSER_INSTALL
           script:
-              - vendor/bin/console code:phpstan -m Spryker.all -v -o 300,300
+              - vendor/bin/console code:phpstan -m Spryker.all -v -o 250,250
           addons:
               <<: *ADDONS_BASE_INFRASTRUCTURE
 
-        - name: PHP8 PHPStan spryker/spryker [3/3]
+        - name: PHP8 PHPStan spryker/spryker [3/4]
           php: "8.1.0"
           stage: Test
           before_install:
@@ -956,7 +969,20 @@ jobs:
           install:
               - *COMPOSER_INSTALL
           script:
-              - vendor/bin/console code:phpstan -m Spryker.all -v -o 600
+              - vendor/bin/console code:phpstan -m Spryker.all -v -o 500,200
+          addons:
+              <<: *ADDONS_BASE_INFRASTRUCTURE
+
+        - name: PHP8 PHPStan spryker/spryker [4/4]
+          php: "8.1.0"
+          stage: Test
+          before_install:
+              - *AWS_SYNC_DOWN_POSTGRES
+              - *BEFORE_INSTALL_SCRIPT
+          install:
+              - *COMPOSER_INSTALL
+          script:
+              - vendor/bin/console code:phpstan -m Spryker.all -v -o 700
           addons:
               <<: *ADDONS_BASE_INFRASTRUCTURE
 
