--- a/composer.json
+++ b/composer.json
@@ -1038,6 +1038,7 @@
         "symfony/security-core": "^4.4.13 || ^5.2.8"
     },
     "require-dev": {
+        "aws/aws-sdk-php": "3.222.14",
         "codeception/codeception": "^4.1.8",
         "codeception/module-asserts": "^1.3.0",
         "codeception/module-cli": "^1.0.2",
@@ -1107,7 +1108,9 @@
         "chromium-revision": 814168,
         "allow-plugins": {
             "dealerdirect/phpcodesniffer-composer-installer": true,
-            "composer/package-versions-deprecated": true
+            "composer/package-versions-deprecated": true,
+            "codeception/c3": true,
+            "spryker/composer-merge-plugin": true
         }
     },
     "scripts": {
