Downgraded "spryker/shared-carts-rest-api"

--- a/composer.json
+++ b/composer.json
@@ -940,7 +940,7 @@
         "spryker/setup-frontend": "^1.6.1",
         "spryker/shared-cart": "^1.18.1",
         "spryker/shared-cart-data-import": "^0.1.0",
-        "spryker/shared-carts-rest-api": "^1.2.4",
+        "spryker/shared-carts-rest-api": "1.2.4",
         "spryker/shared-carts-rest-api-extension": "^1.0.0",
         "spryker/shipment": "^8.9.0",
         "spryker/shipment-cart-connector": "^2.1.1",
