Downgraded spryker/data-import

--- a/composer.json
+++ b/composer.json
@@ -422,7 +422,7 @@
         "spryker/dashboard-merchant-portal-gui-extension": "^1.0.0",
         "spryker/data-export": "^0.1.0",
         "spryker/data-export-extension": "^0.1.0",
-        "spryker/data-import": "^1.0.0",
+        "spryker/data-import": "1.18.0",
         "spryker/dataset": "^1.0.0",
         "spryker/discount": "^9.17.0",
         "spryker/discount-calculation-connector": "^5.2.0",
