Downgraded spryker/price-cart-connector

--- a/composer.json
+++ b/composer.json
@@ -654,7 +654,7 @@
         "spryker/persistent-cart-share": "^1.0.0",
         "spryker/persistent-cart-share-extension": "^1.0.0",
         "spryker/price": "^5.3.0",
-        "spryker/price-cart-connector": "^6.0.0",
+        "spryker/price-cart-connector": "6.7.1",
         "spryker/price-cart-connector-extension": "^1.0.0",
         "spryker/price-data-feed": "^0.2.0",
         "spryker/price-extension": "^1.0.0",
