Downgraded spryker/secrets-manager-aws

--- a/composer.json
+++ b/composer.json
@@ -916,7 +916,7 @@
         "spryker/search-elasticsearch": "^1.13.0",
         "spryker/search-elasticsearch-gui": "^1.0.0",
         "spryker/secrets-manager": "^1.0.0",
-        "spryker/secrets-manager-aws": "^1.0.0",
+        "spryker/secrets-manager-aws": "1.0.0",
         "spryker/secrets-manager-extension": "^1.0.0",
         "spryker/security": "^1.0.0",
         "spryker/security-blocker": "^1.1.0",
