--- a/config/install/testing.yml
+++ b/config/install/testing.yml
@@ -34,6 +34,9 @@ sections:
         rest-request-validation-cache-warmup:
             command: 'vendor/bin/console rest-api:build-request-validation-cache'
 
+        controller-cache-warmup:
+            command: 'vendor/bin/glue glue-api:controller:cache:warm-up'
+
     queue-flush:
         set-permissions:
             command: 'vendor/bin/console queue:permission:set'
