--- a/.travis.yml
+++ b/.travis.yml
@@ -309,6 +309,8 @@ _VALIDATION_SCRIPT: &VALIDATION_SCRIPT
     - npm install
     - npm install speccy@0.11.0 -g
     - speccy lint src/Generated/Glue/Specification/spryker_rest_api.schema.yml --rules=default
+    - speccy lint src/Generated/GlueStorefront/Specification/spryker_storefront_api.schema.yml --rules=default --skip openapi-tags
+    - speccy lint src/Generated/GlueBackend/Specification/spryker_backend_api.schema.yml --rules=default --skip openapi-tags
 
 _VALIDATION_SCRIPT_PHP8: &VALIDATION_SCRIPT_PHP8
     - echo "_VALIDATION_SCRIPT"
