--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
         "async-aws/core": "^1.5.0",
         "async-aws/sns": "^1.0.0",
         "aws/aws-sdk-php": "^3.4.0",
+        "cebe/php-openapi": "^1.6",
         "doctrine/inflector": "^1.4.0 || ^2.0.0",
         "egulias/email-validator": "^2.1.22 || ^3.1.1",
         "everon/collection": "~1.0.0",
