--- a/config/install/docker.ci.functional.yml
+++ b/config/install/docker.ci.functional.yml
@@ -35,6 +35,9 @@ sections:
         rest-api-generate-documentation:
             command: 'vendor/bin/console rest-api:generate:documentation'
 
+        api-generate-documentation:
+            command: 'vendor/bin/glue api:generate:documentation'
+
     init-storages-per-store:
         queue-setup:
             command: 'vendor/bin/console queue:setup'
