--- a/config/install/testing.yml
+++ b/config/install/testing.yml
@@ -15,6 +15,9 @@ sections:
         rest-api-generate-documentation:
             command: 'vendor/bin/console rest-api:generate:documentation'
 
+        api-generate-documentation:
+            command: 'vendor/bin/glue api:generate:documentation'
+
     cache:
         router-cache-warmup-yves:
             command: 'vendor/bin/yves router:cache:warm-up'
