Fixed incompatibility with internal repo in composer.json and ConsoleDependencyProvider.php

--- a/composer.json
+++ b/composer.json
@@ -1059,14 +1059,14 @@
         "phpstan/phpstan": "~1.6.0",
         "phpunit/phpunit": "^9.5.0",
         "psalm/phar": "^4.3.1",
+        "spryker-sdk/async-api": "^0.2.3",
         "spryker-sdk/benchmark": "^0.2.0",
         "spryker-sdk/codeception-phantoman": "^0.1.0",
         "spryker-sdk/composer-constrainer": "^0.2.0",
         "spryker-sdk/load-testing": "^0.1.0",
         "spryker-sdk/phpstan-spryker": "^0.4.0",
         "spryker-sdk/security-checker": "^0.1.0",
-        "spryker-sdk/spryk": "^0.3.0",
-        "spryker-sdk/spryk-gui": "^0.2.0",
+        "spryker-sdk/spryk": "^0.4.0",
         "spryker-shop/web-profiler-widget": "^1.4.2",
         "spryker/architecture-sniffer": "^0.5.0",
         "spryker/code-generator": "^0.3.0",
