TE-10827: Authorization in Glue infrastructure (#6805)
TE-10827 Authorization in Glue infrastructure

--- a/config/install/docker.ci.functional.yml
+++ b/config/install/docker.ci.functional.yml
@@ -25,6 +25,9 @@ sections:
         cache-class-resolver-build:
             command: 'vendor/bin/console cache:class-resolver:build'
 
+        generate-scope-collection-file:
+            command: 'vendor/bin/console oauth:scope-collection-file:generate'
+
     build-development:
         generate-transfers:
             command: 'vendor/bin/console transfer:generate'
