--- a/config/install/docker.yml
+++ b/config/install/docker.yml
@@ -45,6 +45,9 @@ sections:
         translator-generate-cache:
             command: 'vendor/bin/console translator:generate-cache'
 
+        generate-scope-collection-file:
+            command: 'vendor/bin/console oauth:scope-collection-file:generate'
+
     build-production:
         excluded: true
         cache-class-resolver-build:
