--- a/config/install/testing.yml
+++ b/config/install/testing.yml
@@ -14,9 +14,10 @@ sections:
 
         rest-api-generate-documentation:
             command: 'vendor/bin/console rest-api:generate:documentation'
-
         api-generate-documentation:
             command: 'vendor/bin/glue api:generate:documentation'
+        generate-scope-collection-file:
+            command: 'vendor/bin/console oauth:scope-collection-file:generate'
 
     cache:
         router-cache-warmup-yves:
