--- a/deploy.dev.yml
+++ b/deploy.dev.yml
@@ -203,7 +203,7 @@ groups:
             backoffice_us:
                 application: backoffice
                 endpoints:
-                    zed.us.spryker.local:
+                    backoffice.us.spryker.local:
                         store: US
                         services:
                             session:
