FRW-42 Depricated DevVM + updated composer files

--- a/.gitignore
+++ b/.gitignore
@@ -57,6 +57,7 @@ public/MerchantPortal/assets/
 public/Configurator/dist/
 
 # vagrant stuff
+# @deprecated Will be removed after the DevVM environment is no longer supported.
 .vagrant
 Vagrantfile
 
