FRW-42 Refactoring after TL review

--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "license": "MIT",
     "require": {
         "spryker/spryker": "dev-feature/frw-42/master-devvm-deprecation-migration-guidelines",
-        "spryker/spryker-shop": "dev-master",
+        "spryker/spryker-shop": "dev-feature/frw-42/master-devvm-deprecation-migration-guidelines",
         "spryker/install": "dev-master",
         "spryker/rabbit-mq": "dev-master",
         "spryker/event-behavior": "dev-master",
