BO-3391 Switched from Yarn to NPM (#6801)
Switched from Yarn to NPM

--- a/.prettierignore
+++ b/.prettierignore
@@ -1,12 +1,9 @@
 # Ignore paths
 /.github/
-/.yarn/
 /docker/
 /frontend/
 /vendor/
-/public/Yves/assets/
-/public/Zed/assets/
-/public/Backoffice/assets/
+/public/*/assets/**
 **/dist/**
 
 /package-lock.json
