--- a/.travis.yml
+++ b/.travis.yml
@@ -255,8 +255,8 @@ _CHROMDRIVER_DOWNLOAD: &CHROMDRIVER_DOWNLOAD
 
 _BEFORE_INSTALL_SCRIPT: &BEFORE_INSTALL_SCRIPT
     - echo "_BEFORE_INSTALL_SCRIPT"
-    - nvm install 12 > /dev/null
-    - nvm use 12
+    - nvm install 16 > /dev/null
+    - nvm use 16
     - mkdir -p shared/data/common/jenkins
     - mkdir -p shared/data/common/jenkins/jobs
     - mkdir -p data/cache -m 0777
@@ -421,7 +421,6 @@ cache:
     directories:
         - $HOME/other-downloads
         - $HOME/.composer/cache
-        - $HOME/.yarn/cache
         - $HOME/.rvm/gems # Mailcatcher is a ruby gem, takes 5 minutes to install.
         - $HOME/.nvm/.cache
         - /tmp/pear/cache/
@@ -936,9 +935,9 @@ jobs:
           script:
               - unset CHROME_BIN && export CHROME_BIN=${CHROMIUM_BINARY}
               # Install npm packages
-              - export YARN_CACHE_FOLDER=$HOME/.yarn/cache && vendor/bin/console frontend:mp:install-dependencies -vvv
-              - yarn mp:build:production
-              - yarn mp:test
+              - vendor/bin/console frontend:project:install-dependencies -vvv
+              - npm run mp:build:production
+              - npm run mp:test
           after_script:
               - *BROWSER_TESTING_AFTER_SCRIPT
           addons:
