--- a/config/install/docker.multi-db.yml
+++ b/config/install/docker.multi-db.yml
@@ -61,11 +61,8 @@ sections:
             command: 'vendor/bin/console rest-api:generate:documentation'
 
     build-static:
-        merchant-portal-install-dependencies:
-            command: 'console frontend:mp:install-dependencies | tail -100 && echo "Output trimmed, only last 100 lines shown."'
-
-        zed-install-dependencies:
-            command: 'vendor/bin/console frontend:zed:install-dependencies'
+        project-install-dependencies:
+            command: 'console frontend:project:install-dependencies | tail -100 && echo "Output trimmed, only last 100 lines shown."'
 
     build-static-production:
         excluded: true
