--- a/deploy.ci.acceptance.yml
+++ b/deploy.ci.acceptance.yml
@@ -12,6 +12,9 @@ image:
         SPRYKER_PRODUCT_CONFIGURATOR_PORT: 80
         SPRYKER_CONFIGURATOR_ENCRYPTION_KEY: 'change123'
         STORE_NAME_REFERENCE_MAP: '{"DE":"dev-DE","AT":"dev-AT","US":"dev-US"}'
+    node:
+        version: 16
+        npm: 8
 
 composer:
     mode: --no-dev
