--- a/deploy.ci.yml
+++ b/deploy.ci.yml
@@ -58,6 +58,9 @@ image:
         AWS_DEFAULT_REGION: eu-central-1
         AWS_ENDPOINT: http://localhost.localstack.cloud:4566
         STORE_NAME_REFERENCE_MAP: '{"DE":"dev-DE","AT":"dev-AT","US":"dev-US"}'
+    node:
+        version: 16
+        npm: 8
 
 composer:
     mode: --no-dev
