--- a/deploy.dev.yml
+++ b/deploy.dev.yml
@@ -20,6 +20,9 @@ image:
         AWS_SECRET_ACCESS_KEY: test
         AWS_DEFAULT_REGION: eu-central-1
         AWS_ENDPOINT: http://localhost.localstack.cloud:4566
+    node:
+        version: 16
+        npm: 8
 
 composer:
     mode: ''
