CC-14610: adjusted GA

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
                 ]
 
         env:
-            APPLICATION_ENV: devtest
+            APPLICATION_ENV: ci.mysql
             APPLICATION_STORE: DE
             PROJECT: suite
 
