apply suite changes requested by ticket being released

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
                 ]
 
         env:
-            APPLICATION_ENV: devtest
+            APPLICATION_ENV: ci.mysql
             APPLICATION_STORE: DE
             PROJECT: suite
 
@@ -45,7 +45,7 @@ jobs:
               uses: elastic/elastic-github-actions/elasticsearch@master
               with:
                   stack-version: 7.6.0
-                  port: 10005
+                  port: 9200
 
             - uses: actions/setup-node@v1
               with:
