TE-8388: Fixed `both` product type support for image data import.  (#5205)
TE-8388: Fixed both product type support for image data import.

--- a/data/import/common/DE/DE.yml
+++ b/data/import/common/DE/DE.yml
@@ -18,7 +18,9 @@ actions:
       source: data/import/common/DE/combined_product.csv
     - data_entity: combined-product-concrete
       source: data/import/common/DE/combined_product.csv
-    - data_entity: combined-product-image
+    - data_entity: combined-product-image-abstract
+      source: data/import/common/DE/combined_product.csv
+    - data_entity: combined-product-image-concrete
       source: data/import/common/DE/combined_product.csv
     - data_entity: combined-product-price
       source: data/import/common/DE/combined_product.csv
