--- a/data/import/common/AT/AT.yml
+++ b/data/import/common/AT/AT.yml
@@ -20,7 +20,9 @@ actions:
       source: data/import/common/AT/combined_product.csv
     - data_entity: combined-product-concrete
       source: data/import/common/AT/combined_product.csv
-    - data_entity: combined-product-image
+    - data_entity: combined-product-image-abstract
+      source: data/import/common/AT/combined_product.csv
+    - data_entity: combined-product-image-concrete
       source: data/import/common/AT/combined_product.csv
     - data_entity: combined-product-price
       source: data/import/common/AT/combined_product.csv
