OPS-2758: adjusted deploy files with node version (#7041)
CC-20563 Adjusted deploy files with node configuration.

--- a/deploy.spryker-scos.yml
+++ b/deploy.spryker-scos.yml
@@ -60,6 +60,9 @@ image:
             "opcache.revalidate_freq": 0
             "opcache.enable_cli": 0
             "opcache.enable": 0
+    node:
+        version: 16
+        npm: 8
 
 composer:
     mode: --no-dev
