--- a/deploy.spryker-sns.yml
+++ b/deploy.spryker-sns.yml
@@ -56,6 +56,9 @@ image:
         enabled-extensions:
             - blackfire
             - newrelic
+    node:
+        version: 16
+        npm: 8
 
 composer:
     mode: --no-dev
