--- a/deploy.spryker-staging.yml
+++ b/deploy.spryker-staging.yml
@@ -57,6 +57,9 @@ image:
         enabled-extensions:
             - blackfire
             - newrelic
+    node:
+        version: 16
+        npm: 8
 
 composer:
     mode: --no-dev
