FRW-191 Upgraded PHPstan to 1.8 (#7045)
FRW-191 Upgrade to PHPStan 1.8

--- a/composer.json
+++ b/composer.json
@@ -137,7 +137,7 @@
         "codeception/stub": "^3.7.0",
         "psalm/phar": "^4.3.1",
         "sebastian/diff": "*",
-        "phpstan/phpstan": "1.6.7",
+        "phpstan/phpstan": "1.8.2",
         "symfony/browser-kit": "^4.0.0 || ~5.1.8",
         "nette/neon": "^3.2.1",
         "spryker-sdk/benchmark": "dev-master",
@@ -161,7 +161,8 @@
     "autoload-dev": {
         "psr-4": {
             "PyzTest\\": "tests/PyzTest/",
-            "Benchmark\\": "tests/Benchmark/"
+            "Benchmark\\": "tests/Benchmark/",
+            "Symfony\\Contracts\\Translation\\": "vendor/symfony/translation-contracts/"
         },
         "files": [
             "test-autoload.php"
