--- a/.travis.yml
+++ b/.travis.yml
@@ -1134,7 +1134,7 @@ jobs:
           stage: Test
           env:
               - PROGRESS_TYPE=plain
-              - SPRYKER_PLATFORM_IMAGE=spryker/php:8.1-RC
+              - SPRYKER_PLATFORM_IMAGE=spryker/php:8.1
               - TRAVIS=1
           script:
               - docker/sdk boot -v deploy.ci.functional.mariadb.yml
@@ -1146,7 +1146,7 @@ jobs:
           stage: Test
           env:
               - PROGRESS_TYPE=plain
-              - SPRYKER_PLATFORM_IMAGE=spryker/php:8.1-RC
+              - SPRYKER_PLATFORM_IMAGE=spryker/php:8.1
               - TRAVIS=1
           script:
               - docker/sdk boot -v deploy.ci.functional.yml
@@ -1158,7 +1158,7 @@ jobs:
           stage: Test
           env:
               - PROGRESS_TYPE=plain
-              - SPRYKER_PLATFORM_IMAGE=spryker/php:8.1-RC
+              - SPRYKER_PLATFORM_IMAGE=spryker/php:8.1
               - TRAVIS=1
           script:
               - docker/sdk boot -v deploy.ci.acceptance.mariadb.yml
@@ -1171,7 +1171,7 @@ jobs:
           stage: Test
           env:
               - PROGRESS_TYPE=plain
-              - SPRYKER_PLATFORM_IMAGE=spryker/php:8.1-RC
+              - SPRYKER_PLATFORM_IMAGE=spryker/php:8.1
               - TRAVIS=1
           script:
               - docker/sdk boot -v deploy.ci.acceptance.yml
@@ -1184,7 +1184,7 @@ jobs:
           stage: Test
           env:
               - PROGRESS_TYPE=plain
-              - SPRYKER_PLATFORM_IMAGE=spryker/php:8.1-RC
+              - SPRYKER_PLATFORM_IMAGE=spryker/php:8.1
               - TRAVIS=1
           script:
               - docker/sdk boot -v deploy.ci.api.yml
@@ -1198,7 +1198,7 @@ jobs:
           stage: Test
           env:
               - PROGRESS_TYPE=plain
-              - SPRYKER_PLATFORM_IMAGE=spryker/php:8.1-RC
+              - SPRYKER_PLATFORM_IMAGE=spryker/php:8.1
               - TRAVIS=1
           script:
               - docker/sdk boot -v deploy.ci.api.mariadb.yml
@@ -1212,7 +1212,7 @@ jobs:
           stage: Test
           env:
               - PROGRESS_TYPE=plain
-              - SPRYKER_PLATFORM_IMAGE=spryker/php:8.1-RC
+              - SPRYKER_PLATFORM_IMAGE=spryker/php:8.1
               - TRAVIS=1
           script:
               - docker/sdk boot -v deploy.yml
@@ -1220,5 +1220,20 @@ jobs:
               - docker run -it --rm -e SPRYKER_NGINX_CGI_HOST_YVES_EU=localhost -e SPRYKER_NGINX_CGI_HOST_BACKOFFICE_EU=localhost -e SPRYKER_NGINX_CGI_HOST_BACKEND_GATEWAY_EU=localhost -e SPRYKER_NGINX_CGI_HOST_BACKEND_API_EU=localhost -e SPRYKER_NGINX_CGI_HOST_GLUE_EU=localhost -e SPRYKER_NGINX_CGI_HOST_CONFIGURATOR_EU=localhost -e SPRYKER_NGINX_CGI_HOST_YVES_US=localhost -e SPRYKER_NGINX_CGI_HOST_GLUE_US=localhost -e SPRYKER_NGINX_CGI_HOST_BACKOFFICE_US=localhost -e SPRYKER_NGINX_CGI_HOST_BACKEND_GATEWAY_US=localhost -e SPRYKER_NGINX_CGI_HOST_BACKEND_API_US=localhost -e ALLOWED_IP=127.0.0.1 spryker_demo_frontend:1.0-frontend nginx -t
               - docker run -it --rm --entrypoint='' spryker_demo_frontend:1.0-frontend ls -al /data/public/Yves/assets/myhash
               - docker run -it --rm --entrypoint='' spryker_demo_frontend:1.0-frontend ls -al /data/public/Zed/assets/
+
+        - name: Docker / Debian / PHP 8.1 / Frontend & Assets
+          <<: *DOCKER_BUILD_TEMPLATE
+          stage: Test
+          env:
+              - PROGRESS_TYPE=plain
+              - SPRYKER_PLATFORM_IMAGE=spryker/php:8.1
+              - TRAVIS=1
+          script:
+              - docker/sdk boot -v deploy.yml
+              - SPRYKER_BUILD_HASH=myhash docker/sdk export images
+              - docker run -it --rm -e SPRYKER_NGINX_CGI_HOST_YVES_EU=localhost -e SPRYKER_NGINX_CGI_HOST_BACKOFFICE_EU=localhost -e SPRYKER_NGINX_CGI_HOST_BACKEND_GATEWAY_EU=localhost -e SPRYKER_NGINX_CGI_HOST_BACKEND_API_EU=localhost -e SPRYKER_NGINX_CGI_HOST_GLUE_EU=localhost -e SPRYKER_NGINX_CGI_HOST_CONFIGURATOR_EU=localhost -e SPRYKER_NGINX_CGI_HOST_YVES_US=localhost -e SPRYKER_NGINX_CGI_HOST_GLUE_US=localhost -e SPRYKER_NGINX_CGI_HOST_BACKOFFICE_US=localhost -e SPRYKER_NGINX_CGI_HOST_BACKEND_GATEWAY_US=localhost -e SPRYKER_NGINX_CGI_HOST_BACKEND_API_US=localhost -e ALLOWED_IP=127.0.0.1 spryker_demo_frontend:1.0-frontend nginx -t
+              - docker run -it --rm --entrypoint='' spryker_demo_frontend:1.0-frontend ls -al /data/public/Yves/assets/myhash
+              - docker run -it --rm --entrypoint='' spryker_demo_frontend:1.0-frontend ls -al /data/public/Zed/assets/
+
 services:
     - redis
