--- a/tests/PyzTest/Glue/ShoppingLists/codeception.yml
+++ b/tests/PyzTest/Glue/ShoppingLists/codeception.yml
@@ -1,4 +1,4 @@
-namespace: PyzTest\Glue\ProductConfigurations
+namespace: PyzTest\Glue\ShoppingLists
 
 paths:
     tests: .
@@ -13,32 +13,26 @@ coverage:
 
 suites:
     RestApi:
-        class_name: ProductConfigurationsApiTester
+        class_name: ShoppingListsApiTester
         modules:
             enabled:
-                - Asserts
                 - \PyzTest\Shared\Testify\Helper\Environment
                 - \SprykerTest\Shared\Testify\Helper\LocatorHelper:
                       projectNamespaces: ['Pyz']
                 - \SprykerTest\Shared\Propel\Helper\ConnectionHelper
                 - \SprykerTest\Shared\Testify\Helper\DataCleanupHelper
-                - \SprykerTest\Shared\Testify\Helper\DependencyHelper
                 - \SprykerTest\Glue\Testify\Helper\GlueRest
                 - \SprykerTest\Glue\Testify\Helper\OpenApi3
                 - \SprykerTest\Glue\Testify\Helper\JsonPath
-                - \SprykerTest\Shared\Testify\Helper\DependencyHelper
-                - \SprykerTest\Shared\Testify\Helper\ConfigHelper
                 - \SprykerTest\Shared\Product\Helper\ProductDataHelper
-                - \SprykerTest\Shared\ProductConfiguration\Helper\ProductConfigurationHelper
+                - \SprykerTest\Shared\ShoppingList\Helper\ShoppingListHelper
                 - \SprykerTest\Shared\Customer\Helper\CustomerDataHelper
+                - \SprykerTest\Shared\Testify\Helper\DependencyHelper
                 - \SprykerTest\Glue\AuthRestApi\Helper\AuthRestApiHelper
-                - \SprykerTest\Shared\Quote\Helper\PersistentQuoteHelper
-                - \SprykerTest\Shared\Sales\Helper\SalesDataHelper
-                - \SprykerTest\Zed\Oms\Helper\OmsHelper
+                - \SprykerTest\Shared\ProductConfiguration\Helper\ProductConfigurationHelper
                 - \SprykerTest\Zed\Company\Helper\CompanyHelper
                 - \SprykerTest\Zed\CompanyBusinessUnit\Helper\CompanyBusinessUnitHelper
                 - \SprykerTest\Shared\CompanyUser\Helper\CompanyUserHelper
-                - \SprykerTest\Shared\ShoppingList\Helper\ShoppingListHelper
                 - \PyzTest\Glue\Auth\Helper\CompanyMailConnectorDependencyHelper
             config:
                 \SprykerTest\Glue\Testify\Helper\GlueRest:
