--- a/.travis.yml
+++ b/.travis.yml
@@ -405,10 +405,10 @@ env:
         - APPLICATION_STORE=DE
         - SPRYKER_TESTING_ENABLED=1
         - PROJECT=suite
-        - ARTIFACTS_KEY=AKIAJD43J5ACVDJKUXLA
+        - ARTIFACTS_KEY=$AWS_S3_ACCESS_KEY_ID
         - ARTIFACTS_SECRET=$AWS_S3_SECRET_ACCESS_KEY
         - ARTIFACTS_BUCKET=spryker-ci
-        - AWS_ACCESS_KEY_ID=AKIAJD43J5ACVDJKUXLA
+        - AWS_ACCESS_KEY_ID=$AWS_S3_ACCESS_KEY_ID
         - AWS_SECRET_ACCESS_KEY=$AWS_S3_SECRET_ACCESS_KEY
         - AWS_DEFAULT_REGION=eu-west-1
         - POSTGRES_PORT="5432"
