--- a/deploy.spryker-faas-speu.yml
+++ b/deploy.spryker-faas-speu.yml
@@ -5,7 +5,7 @@ tag: '1.0'
 
 environment: docker.dev
 image:
-    tag: spryker/php:7.4
+    tag: spryker/php:8.1
     php:
         enabled-extensions:
             - blackfire
@@ -14,6 +14,9 @@ image:
         SPRYKER_PRODUCT_CONFIGURATOR_PORT: 80
         SPRYKER_PRODUCT_CONFIGURATOR_ENCRYPTION_KEY: 'change123'
         SPRYKER_PRODUCT_CONFIGURATOR_HEX_INITIALIZATION_VECTOR: '0c1ffefeebdab4a3d839d0e52590c9a2'
+    node:
+        version: 16
+        npm: 8
 composer:
     mode: --no-dev
     autoload: --classmap-authoritative
