FRW-261 small fix

--- a/.travis.yml
+++ b/.travis.yml
@@ -253,7 +253,7 @@ _RESTORE_MYSQL_BACKUP: &RESTORE_MYSQL_BACKUP
     - *RESTORE_BACKUP
 
 _RESTORE_POSTGRES_BACKUP: &RESTORE_POSTGRES_BACKUP
-    - psql -p $POSTGRES_PORT -f $TRAVIS_BUILD_DIR/database_dump/pgdumpall.sql
+    - psql -p $POSTGRES_PORT -U postgres -f $TRAVIS_BUILD_DIR/database_dump/pgdumpall.sql
     - *RESTORE_BACKUP
 
 _CHROMDRIVER_DOWNLOAD: &CHROMDRIVER_DOWNLOAD
