--- a/composer.json
+++ b/composer.json
@@ -125,7 +125,7 @@
         "spryker-sdk/phpstan-spryker": "^0.4.0",
         "spryker-sdk/composer-constrainer": "dev-master",
         "spryker-sdk/composer-replace": "dev-master",
-        "spryker-sdk/spryk": "dev-master as 0.4.x-dev",
+        "spryker-sdk/spryk": "dev-master as 0.4.5",
         "dms/phpunit-arraysubset-asserts": "^0.4.0",
         "codeception/phpunit-wrapper": "^9.0.0",
         "codeception/module-rest": "^1.0",
