FRW-332  Drop php7 and Symfony 4 (#7173)
FRW-332 PHP 8+ and Symfony 5+

--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "spryker-eco/payone": "dev-master",
         "spryker/decimal-object": "^1.0.0",
         "spryker/composer-merge-plugin": "dev-master",
-        "php": ">=7.4",
+        "php": ">=8.0",
         "ext-bcmath": "*",
         "ext-curl": "*",
         "ext-gd": "*",
@@ -30,29 +30,29 @@
         "ext-pgsql": "*",
         "ext-readline": "*",
         "ext-redis": "*",
-        "async-aws/core": "^1.5.0",
+        "async-aws/core": "^1.10.0",
         "async-aws/sns": "^1.0.0",
-        "aws/aws-sdk-php": "^3.4.0",
+        "aws/aws-sdk-php": "^3.132.4",
         "cebe/php-openapi": "^1.6",
-        "doctrine/inflector": "^1.4.0 || ^2.0.0",
+        "doctrine/inflector": "^1.4.2 || ^2.0.0",
         "egulias/email-validator": "^2.1.22 || ^3.1.1",
         "everon/collection": "~1.0.0",
         "everon/criteria-builder": "~1.1.6",
         "everon/factory": "~1.1.4",
         "galbar/jsonpath": "^1.0",
-        "guzzlehttp/guzzle": "^6.3.0 || ^7.0.0",
-        "justinrainbow/json-schema": "^5.2",
-        "laminas/laminas-config": "^2.5.1 || ^3.1.0",
-        "laminas/laminas-filter": "^2.5.1",
-        "laminas/laminas-servicemanager": "^2.7.4 || ^3.3.0",
-        "lcobucci/jwt": "^3.4.6 || ^4.0.0",
+        "guzzlehttp/guzzle": "^7.0.0",
+        "justinrainbow/json-schema": "^5.2.9",
+        "laminas/laminas-config": "^3.4.0",
+        "laminas/laminas-filter": "^2.10.0",
+        "laminas/laminas-servicemanager": "^3.6.0",
+        "lcobucci/jwt": "^4.0.0",
         "league/csv": "^9.2",
         "league/flysystem": "^2.0",
         "league/flysystem-aws-s3-v3": "^2.1.0",
         "league/flysystem-ftp": "^2.0.8",
-        "league/oauth2-client": "^2.5.0",
-        "league/oauth2-server": "^8.0.0",
-        "mikey179/vfsstream": "^1.6",
+        "league/oauth2-client": "^2.6.0",
+        "league/oauth2-server": "^8.3.0",
+        "mikey179/vfsstream": "^1.6.7",
         "moneyphp/money": "^3.0.0",
         "monolog/monolog": "^1.25.0 || ^2.0.0",
         "nette/di": "^3.0.0",
@@ -60,53 +60,53 @@
         "predis/predis": "^1.1.1",
         "propel/propel": "2.0.0-beta2",
         "psr/container": "^1.0.0",
-        "psr/http-message": "^1.0.0",
-        "psr/log": "^1.0.0",
+        "psr/http-message": "^1.0.1",
+        "psr/log": "^1.0.1",
         "ramsey/uuid": "^4.0.1",
         "riskio/oauth2-auth0": "^2.4.0",
-        "ruflin/elastica": "^6.0.0 || ^7.0.0",
+        "ruflin/elastica": "^6.2.0 || ^7.0.0",
         "seld/signal-handler": "^1.2.0",
-        "swiftmailer/swiftmailer": "^5.4.5 || ^6.1.0",
-        "symfony-cmf/routing": "^2.0.0",
-        "symfony/amazon-sqs-messenger": "^5.0.0 || ^6.0.0",
-        "symfony/config": "^4.0.0 || ^5.0.0",
-        "symfony/console": "^4.0.0 || ^5.2.0",
-        "symfony/debug": "^4.0.0",
-        "symfony/error-handler": "^4.4.4 || ^5.0.4",
-        "symfony/event-dispatcher": "^4.3.0 || ^5.1.0",
-        "symfony/filesystem": "^4.1.0 || ^5.1.8",
-        "symfony/finder": "^4.3.0 || ^5.0.0",
-        "symfony/form": "^4.0.15 || ^5.0.0",
-        "symfony/http-client": "^4.4.0 || ^5.0.0",
-        "symfony/http-foundation": "^4.4.7 || ^5.0.7",
-        "symfony/http-kernel": "^4.4.13 || ^5.1.5",
-        "symfony/intl": "^4.0.0 || ^5.0.0",
+        "swiftmailer/swiftmailer": "^6.1.0",
+        "symfony-cmf/routing": "^2.3.3",
+        "symfony/amazon-sqs-messenger": "^5.1.0 || ^6.0.0",
+        "symfony/config": "^5.0.9",
+        "symfony/console": "^5.3.0",
+        "symfony/debug": "^4.4.9",
+        "symfony/error-handler": "^5.0.9",
+        "symfony/event-dispatcher": "^5.1.0",
+        "symfony/filesystem": "^5.1.8",
+        "symfony/finder": "^5.3.0",
+        "symfony/form": "^5.2.0",
+        "symfony/http-client": "^5.0.9",
+        "symfony/http-foundation": "^5.2.0",
+        "symfony/http-kernel": "^5.2.0",
+        "symfony/intl": "^5.0.9",
         "symfony/messenger": "^5.3.0 || ^6.0.0",
-        "symfony/mime": "^4.2.12 < 4.3.0 || ^4.3.8 || ^5.0.0",
-        "symfony/options-resolver": "^4.0.0 || ^5.0.0",
-        "symfony/process": "^4.0.0 || ^5.0.0",
-        "symfony/property-access": "^4.0.0 || ^5.0.0",
-        "symfony/routing": "^4.3.0 || ^5.0.0",
-        "symfony/security-core": "^4.4.21 || ^5.2.8",
-        "symfony/security-http": "^4.4.21 || ^5.2.8",
-        "symfony/security-csrf": "^4.4.21 || ^5.0.0",
-        "symfony/security-guard": "^4.4.21 || ^5.2.8",
-        "symfony/serializer": "^4.0.0 || ^5.0.0",
-        "symfony/stopwatch": "^4.0.0 || ^5.0.0",
-        "symfony/translation": "^4.4.0 || ^5.0.0",
-        "symfony/translation-contracts": "^2.0.0",
-        "symfony/twig-bridge": "^4.3.0 || ^5.0.0",
-        "symfony/validator": "^4.3.11 || ^5.0.0",
-        "symfony/yaml": "^4.0.0 || ^5.0.0",
-        "twig/twig": "^1.43.1 || ^2.9.0 || ^3.0.0",
+        "symfony/mime": "^5.0.9",
+        "symfony/options-resolver": "^5.0.9",
+        "symfony/process": "^5.4.0",
+        "symfony/property-access": "^5.4.0",
+        "symfony/routing": "^5.1.0",
+        "symfony/security-core": "^5.2.8",
+        "symfony/security-http": "^5.2.8",
+        "symfony/security-csrf": "^5.0.9",
+        "symfony/security-guard": "^5.2.8",
+        "symfony/serializer": "^5.0.9",
+        "symfony/stopwatch": "^5.0.9",
+        "symfony/translation": "^5.0.9",
+        "symfony/translation-contracts": "^2.1.2",
+        "symfony/twig-bridge": "^5.0.9",
+        "symfony/validator": "^5.2.0",
+        "symfony/yaml": "^5.1.10",
+        "twig/twig": "^2.13.0 || ^3.0.0",
         "voku/anti-xss": "^4.1.20",
         "webmozart/glob": "^4.0.0",
         "willdurand/negotiation": "^3.0.0",
-        "laminas/laminas-barcode": "^2.8.0"
+        "laminas/laminas-barcode": "^2.9.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5.2",
-        "codeception/codeception": "^4.1.7",
+        "codeception/codeception": "^4.2.0",
         "codeception/lib-innerbrowser": "^1.3.2",
         "spryker/architecture-sniffer": "dev-master",
         "spryker/development-core": "dev-master",
@@ -116,7 +116,7 @@
         "pdepend/pdepend": "dev-master as 2.11.0",
         "phpmd/phpmd": "^2.0.0",
         "composer/package-versions-deprecated": "^1.8.0",
-        "symfony/web-profiler-bundle": "^4.0.0 || ^5.0.0",
+        "symfony/web-profiler-bundle": "^5.0.0",
         "symfony/var-dumper": "*",
         "spryker-sdk/codeception-phantoman": "dev-master",
         "stecman/symfony-console-completion": "*",
@@ -125,7 +125,7 @@
         "spryker-sdk/phpstan-spryker": "^0.4.0",
         "spryker-sdk/composer-constrainer": "dev-master",
         "spryker-sdk/composer-replace": "dev-master",
-        "spryker-sdk/spryk": "dev-master as 0.4.5",
+        "spryker-sdk/spryk": "dev-master as 0.4.6",
         "dms/phpunit-arraysubset-asserts": "^0.4.0",
         "codeception/phpunit-wrapper": "^9.0.0",
         "codeception/module-rest": "^1.0",
@@ -138,7 +138,7 @@
         "psalm/phar": "^4.3.1",
         "sebastian/diff": "*",
         "phpstan/phpstan": "1.8.8",
-        "symfony/browser-kit": "^4.0.0 || ~5.1.8",
+        "symfony/browser-kit": "~5.1.8",
         "nette/neon": "^3.2.1",
         "spryker-sdk/benchmark": "dev-master",
         "spryker/docker-chromedriver": "dev-master",
@@ -175,7 +175,7 @@
     "prefer-stable": true,
     "config": {
         "platform": {
-            "php": "7.4.15"
+            "php": "8.0.19"
         },
         "preferred-install": {
             "spryker/*": "source",
