Removed old symfony console and security-core constraints in root composer.json

--- a/composer.json
+++ b/composer.json
@@ -1048,9 +1048,7 @@
         "spryker/zed-navigation-extension": "^1.0.0",
         "spryker/zed-request": "^3.17.0",
         "spryker/zed-request-extension": "^1.0.0",
-        "spryker/zed-ui": "^1.0.0",
-        "symfony/console": "^4.10.0 || ^5.2.0",
-        "symfony/security-core": "^4.4.13 || ^5.2.8"
+        "spryker/zed-ui": "^1.0.0"
     },
     "require-dev": {
         "codeception/codeception": "^4.1.8",
